--- a/handy/handy.css
+++ b/handy/handy.css
@@ -41,24 +41,7 @@ ul{
 	grid-row: 3;
 	grid-column: 1/6
 }
-img[src="banner-1.jpg"]{
-	grid-row: 5;
-	grid-column: 2/3
-	margin-left: 20px;
-	margin-right: 20px;
-}
-img[src="banner-2.jpg"]{
-	grid-row: 5;
-	grid-column: 3/4
-	margin-left: 20px;
-	margin-right: 20px;
-}
-img[src="banner-3.jpg"]{
-	grid-row: 5;
-	grid-column: 4/5
-	margin-left: 20px;
-	margin-right: 20px;
-}
+
 #ribbon{
 	background-color: #ffe718;
 }
@@ -98,28 +81,125 @@ img[src="banner-3.jpg"]{
 	background-color: #ffe718;
 	grid-row: 5;
 	display: grid;
-}
-#bannerblock1{
 	position: relative;
 	width: 300px;
+	height: 90px;
 	display: inline-block;
 	margin-left: 10px;
 	margin-right: 10px;
 }
-#bannerblock2{
+.bannerblocks>h1{
+	font-size: 22px;
 	position: relative;
-	width: 300px;
-	display: inline-block;
-	margin-left: 10px;
-	margin-right: 10px;
+	bottom: 40px;
+	right: 0px;
+	font-weight: 600;
 }
-#bannerblock3{
+.bannerblocks>p{
+	font-size: 14px;
 	position: relative;
-	width: 300px;
-	display: inline-block;
-	margin-left: 10px;
-	margin-right: 10px;
+	bottom: 40px;
+	font-weight: 600;
 }
-#handshake{
+#leftbanner>p{
+	right: -35px;
+}
+#middlebanner>p{
+	right: -30px;
+}
+#rightbanner>p{
+	right: -23px;
+}
+#bannerpngs{
 	width: 50px;
+	position: relative;
+	left: -100px;
+	top: 25px;
+}
+#leftbanner{
+	bottom: 15px;
+}
+#middlebanner>h1,#rightbanner>h1,#middlebanner>p,#rightbanner>p{
+	top: -55px;
+}
+#middlebanner>img,#rightbanner>img{
+	top: 15px;
+}
+.ftext{
+	grid-row: 9;
+	grid-column: 1/2;
+}
+#leftbanner:hover,#middlebanner:hover,#rightbanner:hover{
+	background-color: #DDD6CE;
+	filter: invert(100%);
+	transition: smooth;
+}
+
+
+
+/*#wrapper .text {
+position:relative;
+bottom:30px;
+left:0px;
+visibility:hidden;						//niet nodig @xeno :);
+}
+
+#wrapper:hover .text {
+visibility:visible;
+}*/
+
+
+
+
+
+
+.testtext1,.testtext2,.testtext3{
+	display: inline;
+	margin-left: 130px;
+	margin-right: 130px;
+	position: relative;
+	bottom: 120px;
+	color: transparent;
+}
+.banner1,.banner2,.banner3{
+	display: inline;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+.banner1:hover{
+	opacity: 0.1;
+}
+.banner1:hover .testtext1{
+	color: black;
+}
+.banner2:hover .testtext2{
+	color: black;
+}
+.banner3:hover p{
+	color: pink;
+}
+#weten:hover{
+	color:white;
+	background-color: #222931;
+}
+
+
+
+.dropdown{
+	color: white;
+}
+.dropdown:hover{
+	color: #222931
+}
+#portfolio{
+	margin-left:10px;
+}
+#angle-down{
+	height: 20px;
+	position: relative;
+	top: -650px;
+	left: 145px;
+}
+#portfolio{
+	margin-left: 20px;
 }
