--- a/handy/handy.css
+++ b/handy/handy.css
@@ -1,205 +1,402 @@
-body{
-	font-family: Archivo, arial black;
-}
-div{
-	margin: 0 auto;
-	width: 1100px;
-	text-align: center;
-}
-.grid-container{
-	width: 1000px;
-	display: grid;
-	grid-gap: 15px;
-}
-#logo{
-	grid-row: 1;
-	grid-column: 1;
-	position: relative;
-	left: -400px;
-}
-ul>li{
-	display: inline;
-	color: #ffffff;
-	padding-left: 10px;
-}
-ul{
-	background-color: #222931;
-	width: 950px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	text-align: left;
-	position: relative;
-	top: -400px;
-	grid-row: 4;
-	grid-column: 1/6
-}
-#header{
-	width: 120%;
-	position: relative;
-	left: -170px;
-	top: 40px;
-	grid-row: 3;
-	grid-column: 1/6
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    padding: 0px;
+    font-family: 'Archivo', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
 }
 
-#ribbon{
-	background-color: #ffe718;
+.navbar {
+    grid-row: 2 / 2;
+    grid-column: 1 / 4;
 }
-#oplossingen{
-	position: relative;
-	left: -300px;
-	top: 50px;
-	font-size: 34px;
-	font-weight: 700;
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
-#werken{
-	position: relative;
-	top: -5px;
-	font-size: 16px;
-	font-weight: 700;
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
-#weten{
-	position: relative;
-	left: 800px;
-	top: -50px;
-	font-size: 12px;
-	font-weight: 500px;
-	background-color: #ffffff;
-	width: 140px;
-	padding-bottom: 15px;
-	padding-top: 15px;
+
+.dropdownmenu {
+    float: left;
+    overflow: hidden;
 }
-#footer{
-	width: 120%;
-	position: relative;
-	left: -170px;
-	top: 40px;
-	grid-row: 4;
-	grid-column: 1/6;
+
+.dropdownmenu .dropbtn {
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
 }
-.bannerblocks{
-	background-color: #ffe718;
-	grid-row: 5;
-	display: grid;
-	position: relative;
-	width: 300px;
-	height: 90px;
-	display: inline-block;
-	margin-left: 10px;
-	margin-right: 10px;
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #ffe718;
+    color: black;
 }
-.bannerblocks>h1{
-	font-size: 22px;
-	position: relative;
-	bottom: 40px;
-	right: 0px;
-	font-weight: 600;
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #222931;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
-.bannerblocks>p{
-	font-size: 14px;
-	position: relative;
-	bottom: 40px;
-	font-weight: 600;
+
+.dropdown-content a {
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 12px;
 }
-#leftbanner>p{
-	right: -35px;
+
+.dropdown-content a:hover {
+    background-color: #FFE718;
+    font-size: 16px;
 }
-#middlebanner>p{
-	right: -30px;
+
+.dropdownmenu:hover .dropdown-content {
+    display: block;
 }
-#rightbanner>p{
-	right: -23px;
+
+.container {
+    display: grid;
+    grid-template-columns: 325px 325px 325px;
+    width: 1000px;
+    margin: auto;
 }
-#bannerpngs{
-	width: 50px;
-	position: relative;
-	left: -100px;
-	top: 25px;
+
+.logo {
+    padding: 20px;
+    grid-row: 1 / 1;
+    grid-column: 1 / 4;
 }
-#leftbanner{
-	bottom: 15px;
+
+.header {
+    background-image: url("img/header.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    top: -23px;
+    width: 100%;
+    min-height: 575px;
+    height: 50%;
+    z-index: -1;
 }
-#middlebanner>h1,#rightbanner>h1,#middlebanner>p,#rightbanner>p{
-	top: -55px;
+
+.ribbon {
+    width: 100%;
+    height: 17%;
+    background-color: #ffe718;
+    margin-top: 20px;
 }
-#middlebanner>img,#rightbanner>img{
-	top: 15px;
+
+.ribbontext {
+    grid-row: 3 / 3;
+    grid-column: 1 / 4;
+    margin-left: 18%;
+    display: inline-block;
+    position: relative;	
+    top: 57px;
 }
-.ftext{
-	grid-row: 9;
-	grid-column: 1/2;
+
+p.a {
+    display: inline;
+    font-size: 34px;
+    font-weight: 700;
+    padding-right: 10px;
 }
-#leftbanner:hover,#middlebanner:hover,#rightbanner:hover{
-	background-color: #DDD6CE;
-	filter: invert(100%);
-	transition: smooth;
+
+p.b {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.More {
+    position: relative;
+    float: right;
+    width: 250px;
+    height: 40px;
+    background: white;
+    margin-right: 25%;
+    margin-top: 60px;
+    border: none;
+    font-size: 12px;
+}
+
+.More:hover {
+    background-color: #222931;
+    color: white;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: black;
+}
+
+.image {
+    display: block;
+    width: 300px;
+    height: auto;
+}
+
+.banner-1, .banner-2, .banner-3 {
+    font-size: 32px;
+    font-weight: 600;
+}
+
+.banner-1 {
+    position: relative;
+    grid-row: 1/1;
+    grid-column: 1/2;
+    width: 300px;
+}
+
+.banner-1:hover .overlay {
+    opacity: 0.75;
+}
+
+.banner-2 {
+    position: relative;
+    grid-row: 1/1;
+    grid-column: 2/3;
+    width: 300px;
+}
+
+.banner-2:hover .overlay {
+    opacity: 0.75;
+}
+
+.banner-3 {
+    position: relative;
+    grid-row: 1/1;
+    grid-column: 3/4;
+    width: 300px;
+}
+
+.banner-3:hover .overlay {
+    opacity: 0.75;
+}
+
+.footer1 {
+    background-image: url("img/footer.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    min-height: 307px;
+    z-index: 1;
+    top: 60px;
+}
+
+#dealbanner h, #dienstbanner h, #contactbanner h{
+    font-size: 22px;
+    font-weight: 600;
+}
+
+#dealbanner p, #dienstbanner p, #contactbanner p{
+    font-size: 14px;
+    font-weight: 600;
+}
+
+#dealbanner i, #dienstbanner i, #contactbanner i {
+    float: left;
+    margin-top: 10%;
+    margin-left: 20px;
+}
+
+#dealbanner {
+    grid-row: 1/1;
+    grid-column: 1/2;
+    width: 300px;
+    height: 120px;
+    background-color: #ffe718;
+    color: #222931;
+    z-index: 2;
+}
+
+#dienstbanner {
+    grid-row: 1/1;
+    grid-column: 2/3;
+    width: 300px;
+    height: 120px;
+    background-color: #ffe718;
+    color: #222931;
+    z-index: 2;
+}
+
+#dienstbanner:hover {
+    background: #222931;
+    color: white;
+}
+
+.dienst-link {
+    grid-row: 2;
+    grid-column: 1/4;
+    text-decoration: none;
+    color: black;
+    z-index: 2;
+}
+
+#contactbanner {
+    grid-row: 1/1;
+    grid-column: 3/4;
+    width: 300px;
+    height: 120px;
+    background-color: #ffe718;
+    color: #222931;
+    z-index: 2; 
+}
+
+.deals, .diensten, .contact {
+    padding-left: 100px;
+}
+
+.deals p, .diensten p, .contact p{
+    line-height: 0px;
+}
+
+.text2 {
+    grid-row: 3/3;
+    grid-column: 1/4;
+}
+
+#text2d {
+    float: left;
+    max-width: 500px;
+}
+
+#text3 {
+    float: right;
+    min-width: 300px;
+}
+
+#text2d h1, #text3 h1 {
+    font-size: 24px;
+    line-height: 18px;
+}
+
+#text2d p, #text3 p {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
 }
 
 
-
-/*#wrapper .text {
-position:relative;
-bottom:30px;
-left:0px;
-visibility:hidden;						//niet nodig @xeno :);
+#text3 > i {
+    float: left;
+    padding-right: 10px;
+    font-size: 20px;
+    opacity: 0.6; 
 }
 
-#wrapper:hover .text {
-visibility:visible;
-}*/
-
-
-
-
-
-
-.testtext1,.testtext2,.testtext3{
-	display: inline;
-	margin-left: 130px;
-	margin-right: 130px;
-	position: relative;
-	bottom: 120px;
-	color: transparent;
-}
-.banner1,.banner2,.banner3{
-	display: inline;
-	margin-left: 10px;
-	margin-right: 10px;
-}
-.banner1:hover{
-	opacity: 0.1;
-}
-.banner1:hover .testtext1{
-	color: black;
-}
-.banner2:hover .testtext2{
-	color: black;
-}
-.banner3:hover p{
-	color: pink;
-}
-#weten:hover{
-	color:white;
-	background-color: #222931;
+footer {
+    float: right;
+    position: relative;
+    right: 300px;
+    top: 15px;
 }
 
+.footer {
+    left: 0;
+    width: 100%;
+    background-color: #222931;
+    color: white;
+    text-align: right;
+    height: 50px;
+}
 
+/* page 2 */
+.textpage2 {
+    grid-row: 2;
+    grid-column: 1/4;
+    padding-bottom: 50px;
+}
 
-.dropdown{
-	color: white;
+.textpage2 h1 {
+    font-size: 34px;
+    font-weight: 600;
 }
-.dropdown:hover{
-	color: #222931
+
+.wordhover p {
+    color: #ffe718;
+    display: inline;
 }
-#portfolio{
-	margin-left:10px;
+
+.wordhover {
+    position: relative;
+    display: inline;
 }
-#angle-down{
-	height: 20px;
-	position: relative;
-	top: -650px;
-	left: 145px;
+
+.wordhover .hovertext {
+    visibility: hidden;
+    width: 200px;
+    height: auto;
+    background-color: #5f656d;
+    color: #fff;
+    text-align: left;
+    font-size: 12px;
+    line-height: 24px;
+    font-weight: 500;
+    padding-left: 5px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+    z-index: 1;
 }
-#portfolio{
-	margin-left: 20px;
+
+.wordhover:hover .hovertext {
+    visibility: visible;
+}
+
+.breadcrumb a {
+    text-decoration: none;
+    color: black;
+}
+
+.breadcrumb li {
+    display: inline;
+    font-size: 12px;
+    font-weight: 400;
 }
